# specmetric

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
specmetric/: ast_parser.py  computation_tree.py  parser.py  renderer.py  rule_resolver.py  rules_config.py  visualization_container.py
specmetric/position_calculators/: squarifier.py
specmetric/rules/: compositions.yml  grammatical_expressions.yml
tests/: test_ast_parser.py  test_computation_tree.py  test_parser.py  test_renderer.py  test_rule_resolver.py  test_visualization_container.py
usecases/notebook/: ast_use_case_1_regression_metrics.ipynb  simpsons_use_case_1_regression_metrics.ipynb  use_case_1_regression_metrics.ipynb
usecases/notebook/.ipynb_checkpoints/: ast_use_case_1_regression_metrics-checkpoint.ipynb  simpsons_use_case_1_regression_metrics-checkpoint.ipynb  use_case_1_regression_metrics-checkpoint.ipynb
usecases/spreadsheet/: app.py  berkeley_formatted_mar20_raw.csv  berkeley_with_calculations.csv  chart.html  draco_specmetric_tester.ipynb  excel_equations_setup.ipynb  index.html  package-lock.json
usecases/spreadsheet/.ipynb_checkpoints/: draco_specmetric_tester-checkpoint.ipynb  excel_equations_setup-checkpoint.ipynb
usecases/spreadsheet/templates/: index.html
