[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specmetric"
version = "0.0.1"
authors = [
  { name="Dylan Cashman", email="depcashman@gmail.com" },
]
description = "Visualization tool for metric computations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dylancashman/specmetric"
"Bug Tracker" = "https://github.com/dylancashman/specmetric/issues"